[package]
name = "rust-db-play"
version = "0.1.0"
authors = ["Jonathan M. Altman <jonathan@async.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.5"
r2d2_sqlite = "0.12.0"
rusqlite = "0.20.0"
time = "0.2.0"
serde = "1.0.101"
serde_json = "1.0"
serde_rusqlite = "0.22.0"
